2006-11-08  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-object-url-regexp): New regexp.
	(mixi-friend-url-regexp): Ditto.
	(mixi-diary-url-regexp): Ditto.
	(mixi-topic-url-regexp): Ditto.
	(mixi-message-url-regexp): Ditto.
	(mixi-community-url-regexp): Ditto.
	(mixi-object-content): New function.
	(mixi-make-object-from-url): Ditto.
	(mixi-make-friend-from-url): Ditto.
	(mixi-make-diary-from-url): Ditto.
	(mixi-make-community-from-url): Ditto.
	(mixi-make-topic-from-url): Ditto.
	(mixi-make-message-from-url): Ditto.

2006-11-06  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-expand-url): New macro.
	(mixi-w3-retrieve): Use it.
	(mixi-w3m-retrieve): Ditto.
	(mixi-curl-retrieve): Ditto.

2006-11-01  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-comment-list-regexp): Fix regexp.
	(mixi-topic-comment-list-regexp): Ditto.
	(mixi-get-comments): Follow the change above.

2006-10-28  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-message-box-list): New constant.
	(mixi-message-box-p): New macro.
	(mixi-message-box-name): New function.
	(mixi-get-messages): Use them.

2006-10-25  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-remove-markup): When STRING is nil, insert a null
	string.
	(mixi-make-introduction): New function.
	(mixi-introduction-p): New macro.
	(mixi-introduction-parent): New accessor method.
	(mixi-introduction-owner): Ditto.
	(mixi-introduction-content): Ditto.
	(mixi-introduction-list-page): New macro.
	(mixi-introduction-list-regexp): New regexp.
	(mixi-my-introduction-list-regexp): Ditto.
	(mixi-get-introductions): New function.

2006-10-25  Daiki Ueno  <ueno@unixuser.org>

	* mixi.el (mixi-retrieve-function): Try to select
	mixi-retrieve-function automatically.

2006-10-25  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-cache-expires): Add new constant.
	(mixi-cache-expired-p): Follow the change above.

2006-10-25  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-retrieve-function): Use `radio' instead of `choice'.